--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infrastructure Project Submission</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
         function submitData() {
             let projectName = document.getElementById("projectName").value;
@@ -35,8 +36,9 @@
                 })
                 .then(response => response.text())
                 .then(result => {
-                    alert("Submitted Successfully!");
+                    document.getElementById("successMessage").innerHTML = `<div class="alert alert-success">Submitted Successfully!</div>`;
                     document.getElementById("dataForm").reset();
+                    fetchData(); // Refresh table
                 })
                 .catch(error => console.log("Error:", error));
             };
@@ -47,34 +49,88 @@
                 reader.onloadend(); // Submit without file
             }
         }
+
+        function fetchData() {
+            fetch("https://script.google.com/macros/s/AKfycbxEnmADqpW5VpHBCDJFgOJO4HTUsO33pkVOIXoEbE3asG8KCOS034yAObuVuAa35HYA/exec")
+                .then(response => response.json())
+                .then(data => {
+                    let tableBody = document.getElementById("tableBody");
+                    tableBody.innerHTML = "";
+                    data.forEach(row => {
+                        tableBody.innerHTML += `
+                            <tr>
+                                <td>${row[1]}</td>
+                                <td>${row[2]}</td>
+                                <td>${row[3]}</td>
+                                <td>${row[4]}</td>
+                                <td>${row[5]}</td>
+                                <td><a href="${row[6]}" target="_blank">View File</a></td>
+                            </tr>`;
+                    });
+                })
+                .catch(error => console.log("Error:", error));
+        }
+
+        window.onload = fetchData;
     </script>
 </head>
-<body>
-    <h2>Enter Project Details</h2>
-    <form id="dataForm" onsubmit="event.preventDefault(); submitData();">
-        <label>Project Name:</label>
-        <input type="text" id="projectName" required><br><br>
+<body class="container mt-4">
+    <h2 class="text-center">Infrastructure Project Submission</h2>
+    
+    <div id="successMessage"></div>
 
-        <label>Project Type:</label>
-        <select id="projectType" required>
-            <option value="Water Supply">Water Supply</option>
-            <option value="Road">Road</option>
-            <option value="Building">Building</option>
-        </select><br><br>
+    <form id="dataForm" class="p-4 border rounded bg-light" onsubmit="event.preventDefault(); submitData();">
+        <div class="mb-3">
+            <label class="form-label">Project Name:</label>
+            <input type="text" id="projectName" class="form-control" required>
+        </div>
 
-        <label>Estimated Amount:</label>
-        <input type="number" id="estimatedAmount" required><br><br>
+        <div class="mb-3">
+            <label class="form-label">Project Type:</label>
+            <select id="projectType" class="form-select" required>
+                <option value="Water Supply">Water Supply</option>
+                <option value="Road">Road</option>
+                <option value="Building">Building</option>
+            </select>
+        </div>
 
-        <label>Contract Date:</label>
-        <input type="date" id="contractDate" required><br><br>
+        <div class="mb-3">
+            <label class="form-label">Estimated Amount:</label>
+            <input type="number" id="estimatedAmount" class="form-control" required>
+        </div>
 
-        <label>Road Length (if applicable):</label>
-        <input type="number" id="roadLength"><br><br>
+        <div class="mb-3">
+            <label class="form-label">Contract Date:</label>
+            <input type="date" id="contractDate" class="form-control" required>
+        </div>
 
-        <label>Upload File:</label>
-        <input type="file" id="fileUpload"><br><br>
+        <div class="mb-3">
+            <label class="form-label">Road Length (if applicable):</label>
+            <input type="number" id="roadLength" class="form-control">
+        </div>
 
-        <button type="submit">Submit</button>
+        <div class="mb-3">
+            <label class="form-label">Upload File:</label>
+            <input type="file" id="fileUpload" class="form-control">
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Submit</button>
     </form>
+
+    <h3 class="mt-5">Submitted Records</h3>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Type</th>
+                <th>Estimated Amount</th>
+                <th>Contract Date</th>
+                <th>Road Length</th>
+                <th>File</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody">
+        </tbody>
+    </table>
 </body>
 </html>
