--- a/index.html
+++ b/index.html
@@ -1,7 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infrastructure Project Form</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+
+        h2 {
+            margin-bottom: 15px;
+            color: #333;
+        }
+
+        label {
+            display: block;
+            text-align: left;
+            font-weight: bold;
+            margin: 10px 0 5px;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-size: 14px;
+        }
+
+        button {
+            background: #28a745;
+            color: white;
+            border: none;
+            padding: 12px;
+            width: 100%;
+            font-size: 16px;
+            border-radius: 6px;
+            cursor: pointer;
+            margin-top: 15px;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background: #218838;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+    </style>
     <script>
         function submitForm() {
             var formData = {
@@ -23,6 +87,7 @@
             })
             .then(response => {
                 alert("Form submitted successfully!");
+                document.getElementById("projectForm").reset();
             })
             .catch(error => {
                 console.error("Error:", error);
@@ -32,28 +97,42 @@
     </script>
 </head>
 <body>
-    <h2>Infrastructure Project Form</h2>
-    <form onsubmit="event.preventDefault(); submitForm();">
-        <label>Project Name:</label>
-        <input type="text" id="projectName" required><br><br>
+    <div class="container">
+        <h2>Infrastructure Project Form</h2>
+        <form id="projectForm" onsubmit="event.preventDefault(); submitForm();">
+            <div class="form-group">
+                <label>Project Name:</label>
+                <input type="text" id="projectName" required>
+            </div>
 
-        <label>Project Type:</label>
-        <input type="text" id="projectType" required><br><br>
+            <div class="form-group">
+                <label>Project Type:</label>
+                <input type="text" id="projectType" required>
+            </div>
 
-        <label>Estimated Amount ($):</label>
-        <input type="number" id="estimatedAmount" required><br><br>
+            <div class="form-group">
+                <label>Estimated Amount ($):</label>
+                <input type="number" id="estimatedAmount" required>
+            </div>
 
-        <label>Contract Date:</label>
-        <input type="date" id="contractDate" required><br><br>
+            <div class="form-group">
+                <label>Contract Date:</label>
+                <input type="date" id="contractDate" required>
+            </div>
 
-        <label>Road Length (km):</label>
-        <input type="number" id="roadLength" required><br><br>
+            <div class="form-group">
+                <label>Road Length (km):</label>
+                <input type="number" id="roadLength" required>
+            </div>
 
-        <label>File URL:</label>
-        <input type="url" id="fileUrl"><br><br>
+            <div class="form-group">
+                <label>File URL:</label>
+                <input type="url" id="fileUrl">
+            </div>
 
-        <button type="submit">Submit</button>
-    </form>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
 
