--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
                 fileUrl: fileUrl
             };
 
-            // Submit the form data via POST request
+            // Submit the form data via POST request to the updated Web App URL
             fetch("https://script.google.com/macros/s/AKfycbxybRQSi-egTMZb1zd0UCA_6GPjOLN7lRamvXjLAl7yZgVNkKJy1Ly_HA4lHs0LlHLI/exec", {
                 method: "POST",
-                mode: "no-cors",
                 headers: {
                     "Content-Type": "application/json"
                 },
