--- a/index.html
+++ b/index.html
@@ -99,43 +99,33 @@
         }
 
         function submitForm() {
-            var projectName = document.getElementById("projectName").value;
-            var projectType = document.getElementById("projectType").value;
-            var roadCategory = document.getElementById("roadCategory") ? document.getElementById("roadCategory").value : "";
-            var upgradingType = document.getElementById("upgrading") ? document.getElementById("upgrading").value : "";
-            var estimatedAmount = document.getElementById("estimatedAmount").value;
-            var contractDate = document.getElementById("contractDate").value;
-            var roadLength = document.getElementById("roadLength").value;
-            var fileUrl = document.getElementById("fileUrl").value;
-
-            // Prepare form data for submission
             var formData = {
-                projectName: projectName,
-                projectType: projectType,
-                roadCategory: roadCategory,
-                upgradingType: upgradingType,
-                estimatedAmount: estimatedAmount,
-                contractDate: contractDate,
-                roadLength: roadLength,
-                fileUrl: fileUrl
+                projectName: document.getElementById("projectName").value,
+                projectType: document.getElementById("projectType").value,
+                roadCategory: document.getElementById("roadCategory") ? document.getElementById("roadCategory").value : "",
+                upgradingType: document.getElementById("upgrading") ? document.getElementById("upgrading").value : "",
+                estimatedAmount: document.getElementById("estimatedAmount").value,
+                contractDate: document.getElementById("contractDate").value,
+                roadLength: document.getElementById("roadLength") ? document.getElementById("roadLength").value : "",
+                fileUrl: document.getElementById("fileUrl").value
             };
 
-            // Submit the form data via POST request to the updated Web App URL
-            fetch("https://script.google.com/macros/s/AKfycbxybRQSi-egTMZb1zd0UCA_6GPjOLN7lRamvXjLAl7yZgVNkKJy1Ly_HA4lHs0LlHLI/exec", {
+            fetch("https://script.google.com/macros/s/AKfycbwpd_l_zAyZT8aauYg8h1lQmgd9DYaOOpKGM9PhBMTkoliHQkQHBIzg6-ESKJbtQU4D/exec", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify(formData)
             })
-            .then(response => {
+            .then(response => response.text())
+            .then(data => {
                 alert("Form submitted successfully!");
                 document.getElementById("projectForm").reset();
                 handleProjectTypeChange(); // Reset form visibility settings
             })
             .catch(error => {
                 console.error("Error:", error);
-                alert("Error submitting form.");
+                alert("Error submitting form: " + error.message);
             });
         }
     </script>
@@ -204,4 +194,3 @@
     </div>
 </body>
 </html>
-
