--- a/index.html
+++ b/index.html
@@ -102,30 +102,30 @@
             var formData = {
                 projectName: document.getElementById("projectName").value,
                 projectType: document.getElementById("projectType").value,
-                roadCategory: document.getElementById("roadCategory") ? document.getElementById("roadCategory").value : "",
-                upgradingType: document.getElementById("upgrading") ? document.getElementById("upgrading").value : "",
+                roadCategory: document.getElementById("roadCategory").value,
+                upgradingType: document.getElementById("upgrading").value,
                 estimatedAmount: document.getElementById("estimatedAmount").value,
                 contractDate: document.getElementById("contractDate").value,
-                roadLength: document.getElementById("roadLength") ? document.getElementById("roadLength").value : "",
+                roadLength: document.getElementById("roadLength").value,
                 fileUrl: document.getElementById("fileUrl").value
             };
 
-            fetch("https://script.google.com/macros/s/AKfycbwpd_l_zAyZT8aauYg8h1lQmgd9DYaOOpKGM9PhBMTkoliHQkQHBIzg6-ESKJbtQU4D/exec", {
+            fetch("https://script.google.com/macros/s/AKfycbxybRQSi-egTMZb1zd0UCA_6GPjOLN7lRamvXjLAl7yZgVNkKJy1Ly_HA4lHs0LlHLI/exec", {
                 method: "POST",
+                mode: "no-cors",
                 headers: {
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify(formData)
             })
-            .then(response => response.text())
-            .then(data => {
+            .then(response => {
                 alert("Form submitted successfully!");
                 document.getElementById("projectForm").reset();
                 handleProjectTypeChange(); // Reset form visibility settings
             })
             .catch(error => {
                 console.error("Error:", error);
-                alert("Error submitting form: " + error.message);
+                alert("Error submitting form.");
             });
         }
     </script>
