--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             width: 100%;
             max-width: 500px;
             text-align: center;
+            overflow-y: auto;
+            max-height: 90vh;
         }
 
         h2 {
@@ -77,16 +79,15 @@
             var lengthCapacityGroup = document.getElementById("lengthCapacityGroup");
             var roomNumberGroup = document.getElementById("roomNumberGroup");
 
-            // Hide all conditionally displayed elements
             workTypeGroup.style.display = "none";
             lengthCapacityGroup.style.display = "none";
             roomNumberGroup.style.display = "none";
 
-            if (projectType === "Road" || projectType === "Water Supply" || projectType === "Irrigation" || projectType === "Building") {
+            if (["Road", "Water Supply", "Irrigation", "Building"].includes(projectType)) {
                 workTypeGroup.style.display = "block";
             }
 
-            if (projectType === "Road" || projectType === "Water Supply" || projectType === "Irrigation") {
+            if (["Road", "Water Supply", "Irrigation"].includes(projectType)) {
                 lengthCapacityGroup.style.display = "block";
             }
 
@@ -101,32 +102,20 @@
             var workSelect = document.getElementById("workCategory");
             workSelect.innerHTML = ""; 
 
-            if (projectType === "Road") {
-                workSelect.innerHTML = `
-                    <option value="New cutting">New cutting</option>
-                    <option value="Double cutting">Double cutting</option>
-                    <option value="PCC">PCC</option>
-                    <option value="RCC">RCC</option>
-                    <option value="Soling">Soling</option>
-                `;
-            } else if (projectType === "Water Supply") {
-                workSelect.innerHTML = `
-                    <option value="Intake">Intake</option>
-                    <option value="RVT">RVT</option>
-                    <option value="Pipeline">Pipeline</option>
-                `;
-            } else if (projectType === "Irrigation") {
-                workSelect.innerHTML = `
-                    <option value="Earth canal">Earth canal</option>
-                    <option value="PCC canal">PCC canal</option>
-                    <option value="RCC canal">RCC canal</option>
-                `;
-            } else if (projectType === "Building") {
-                workSelect.innerHTML = `
-                    <option value="New building construction">New building construction</option>
-                    <option value="Maintenance">Maintenance</option>
-                    <option value="Toilet construction">Toilet construction</option>
-                `;
+            var workOptions = {
+                "Road": ["New cutting", "Double cutting", "PCC", "RCC", "Soling"],
+                "Water Supply": ["Intake", "RVT", "Pipeline"],
+                "Irrigation": ["Earth canal", "PCC canal", "RCC canal"],
+                "Building": ["New building construction", "Maintenance", "Toilet construction"]
+            };
+
+            if (workOptions[projectType]) {
+                workOptions[projectType].forEach(option => {
+                    let opt = document.createElement("option");
+                    opt.value = option;
+                    opt.textContent = option;
+                    workSelect.appendChild(opt);
+                });
             }
         }
 
@@ -157,7 +146,7 @@
             .then(() => {
                 alert("Form submitted successfully!");
                 document.getElementById("projectForm").reset();
-                handleProjectTypeChange(); // Reset conditional fields
+                handleProjectTypeChange();
             })
             .catch(error => {
                 console.error("Error:", error);
@@ -170,23 +159,10 @@
     <div class="container">
         <h2>Infrastructure Project Form</h2>
         <form id="projectForm" onsubmit="event.preventDefault(); submitForm();">
-            <div class="form-group">
-                <label>SN:</label>
-                <input type="number" id="sn" required>
-            </div>
-
-            <div class="form-group">
-                <label>Ward No.:</label>
-                <input type="number" id="wardNo" required>
-            </div>
-
-            <div class="form-group">
-                <label>Project Name:</label>
-                <input type="text" id="projectName" required>
-            </div>
-
-            <div class="form-group">
-                <label>Project Type:</label>
+            <div class="form-group"><label>SN:</label><input type="number" id="sn" required></div>
+            <div class="form-group"><label>Ward No.:</label><input type="number" id="wardNo" required></div>
+            <div class="form-group"><label>Project Name:</label><input type="text" id="projectName" required></div>
+            <div class="form-group"><label>Project Type:</label>
                 <select id="projectType" onchange="handleProjectTypeChange()" required>
                     <option value="">Select Project Type</option>
                     <option value="Road">Road</option>
@@ -197,26 +173,22 @@
                     <option value="Others">Others</option>
                 </select>
             </div>
+            <div class="form-group"><label>Estimated Amount:</label><input type="number" id="estimatedAmount" required></div>
+            <div class="form-group"><label>Contract Date:</label><input type="date" id="contractDate" required></div>
+            <div class="form-group"><label>Valuation Amount:</label><input type="number" id="valuationAmount"></div>
+            <div class="form-group"><label>Work Completion Date:</label><input type="date" id="workCompletionDate"></div>
 
             <div class="form-group conditional-fields" id="workTypeGroup">
                 <label>Work Category:</label>
                 <select id="workCategory"></select>
             </div>
-
             <div class="form-group conditional-fields" id="lengthCapacityGroup">
-                <label>Length (m) / Capacity:</label>
-                <input type="number" id="lengthOrCapacity">
+                <label>Length (m) / Capacity:</label><input type="number" id="lengthOrCapacity">
             </div>
-
             <div class="form-group conditional-fields" id="roomNumberGroup">
-                <label>Room Number:</label>
-                <input type="number" id="roomNumber">
+                <label>Room Number:</label><input type="number" id="roomNumber">
             </div>
-
-            <div class="form-group">
-                <label>Remarks:</label>
-                <input type="text" id="remarks">
-            </div>
+            <div class="form-group"><label>Remarks:</label><input type="text" id="remarks"></div>
 
             <button type="submit">Submit</button>
         </form>
